--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 :root {
 
 --branco-principal: #FFFFFF;    
@@ -20,4 +18,16 @@ color: var(--branco-principal);
 * {
     margin: 0;
     padding: 0;
+   }
+
+.principal {
+
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+
+.container {
+    height: 100vh;
    }
